# simplifiedDropBoxServer-Client

./: .gitignore  README.md
Client/: CMakeLists.txt  ErrorsCodes.h  assistantFunctions.cpp  assistantFunctions.h  circularBuffer.cpp  circularBuffer.h  clientProtocol.cpp  clientProtocol.h  clientTuple.cpp  criticalSection.cpp  criticalSection.h  dropbox_client  hashFunction.h  main.cpp  makefile  myString.cpp  myString.h  mylinkedList.h  socketManipulation.cpp  socketManipulation.h  threadPool.cpp  threadPool.h  tuples.h
Client/1_input/: BomUgs
Client/1_input/127.0.1.1_8002/bmnYv/LfG/: en
Client/1_input/127.0.1.1_8003/: yEyzmy
Client/1_input/127.0.1.1_8003/vTOm/: 6jUQB
Client/1_input/127.0.1.1_8003/vTOm/v3Z/: nOgvjU
Client/1_input/127.0.1.1_8005/dir_name/BohS3BQq/: GZ
Client/1_input/mp4a/: Ie
Client/1_input/mp4a/LRB/: ygQI
Client/1_input/mp4a/LRB/m/: Y0
Client/2_input/127.0.1.1_8000/: CCy
Client/2_input/127.0.1.1_8000/dir_name2/: T9m
Client/2_input/127.0.1.1_8001/dir_name2/: P
Client/2_input/127.0.1.1_8003/: nSi
Client/2_input/127.0.1.1_8005/dir_name/: TsG
Client/2_input/127.0.1.1_8009/: yEyzmy
Client/2_input/127.0.1.1_8009/vTOm/: 6jUQB  a3
Client/3_input/127.0.1.1_8000/: zx9IS
Client/3_input/127.0.1.1_8000/bmnYv/: 4lY12  WRc
Client/3_input/127.0.1.1_8005/: hihi
Client/3_input/vTOm/: a3
Client/5_input/: anwTwn64kBytes
Client/5_input/127.0.1.1_8001/: zx9IS
Client/5_input/127.0.1.1_8001/bmnYv/: WRc
Client/5_input/127.0.1.1_8002/: uq
Client/5_input/127.0.1.1_8002/bmnYv/: 4lY12
Client/5_input/dir_name/: 6KJ9
(+38 files in other folders)
